<resources>
    <string name="app_name">Locksmith</string>
    <string name="missing_password">请先添加系统解锁密码</string>
    <string name="security_tip">安全提示</string>
    <string name="finger_print">锁匠 触控ID</string>
    <string name="cancel">取消</string>
    <string name="fingerprint_not_recognized">指纹验证错误请重试</string>
    <string name="use_password">使用密码</string>
    <string name="welcome">欢迎使用</string>
    <string name="ok">好的</string>
    <string name="hardward_error">设备硬件安全模块不可用</string>
    <string name="every_thing_done">一切准备就绪</string>
    <string name="start_use">开始使用</string>
    <string name="about">关于</string>
    <string name="autofill">如何启用自动填充</string>
    <string name="passport">密码</string>
    <string name="bank">银行卡</string>
    <string name="toolbar_title">首页</string>
    <string name="main_tab_title">首页</string>
    <string name="find_tab_title">搜索</string>
    <string name="message_tab_title">发现</string>
    <string name="my_tab_title">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_base">数据库</string>
    <string name="document">文档</string>
    <string name="certificate">证件</string>
    <string name="bank_card">银行卡</string>
    <string name="server">服务器</string>
    <string name="name">名称</string>
    <string name="password">密码</string>
    <string name="account">账户</string>
    <string name="note">备注</string>
    <string name="save">保存</string>
    <string name="input_pass">请输入密码</string>
    <string name="input_card">请输入卡号</string>
    <string name="input_name">请输入名称</string>
    <string name="location">开户行</string>
    <string name="input_location">请输入开户行</string>
    <string name="phone">预留手机号</string>
    <string name="input_phone">请输入预留手机号</string>
    <string name="input_account">请输入账户名</string>
    <string name="information_not_complete">请输入完整信息,名称、用户名、密码</string>
    <string name="auto_hint_phone">手机号</string>
    <string name="auto_hint_email">邮箱</string>
    <string name="auto_hint_username">用户名</string>
    <string name="auto_hint_account">账号</string>
    <string name="auto_hint_member">会员名</string>
    <string name="auto_hint_password">密码</string>
    <string name="auto_fill_prompt">使用锁匠自动填充</string>
    <string name="title_how_to_protect">锁匠如何保护您的数据</string>
    <string name="title_benefit">锁匠优势</string>
    <string name="title_turn_on_autofill">如何启用自动填充</string>
    <string name="faq">常见问题</string>
    <string name="title_safe_practice">安全实践</string>
    <string name="title_service_contact">服务协议</string>
    <string name="title_privacy_policy">隐私政策</string>
    <string name="title_version">版本</string>
    <string name="title_saved_data">已存数据</string>
    <string name="loading">加载中...</string>
    <string name="match_title">你是否要找</string>
    <string name="all_title">所有账号密码</string>
    <string name="delete">删除</string>
    <string name="load_passport_fail">通行证加载失败，请先创建</string>

</resources>
