<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.activity.EditPassActivity">

        <TextView
            android:id="@+id/name_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_edit_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:inputType="text"
            android:background="@drawable/bg_edit_text_selector"
            android:hint="@string/input_name"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/name_title_tv">

        </androidx.appcompat.widget.AppCompatEditText>


        <TextView
            android:id="@+id/account_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/account"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edit_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/account_edit_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_edit_text_selector"
            android:hint="@string/input_card"
            android:paddingStart="5dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/account_title_tv"></androidx.appcompat.widget.AppCompatEditText>

        <TextView
            android:id="@+id/password_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_edit_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_edit_text_selector"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/password_title_tv">

        </androidx.appcompat.widget.AppCompatEditText>

        <ImageView
            android:id="@+id/iv_password_visible_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_password_visible"
            app:layout_constraintEnd_toEndOf="@id/password_edit_et"
            app:layout_constraintTop_toTopOf="@id/password_edit_et"
            app:layout_constraintBottom_toBottomOf="@id/password_edit_et"
            android:layout_marginEnd="@dimen/dp_10"
            android:onClick="onCardVisibleClick"
            />


        <TextView
            android:id="@+id/location_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/location_edit_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_edit_text_selector"
            android:hint="@string/input_location"
            android:inputType="text"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/location_title_tv">

        </androidx.appcompat.widget.AppCompatEditText>

        <TextView
            android:id="@+id/phone_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/phone"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_edit_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone_edit_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_edit_text_selector"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/phone_title_tv">

        </androidx.appcompat.widget.AppCompatEditText>




        <com.brins.locksmith.ui.widget.RoundConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/phone_edit_et"
            android:id="@+id/note_layout_rl"
            android:paddingBottom="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:round_corner="5dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/note_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/note"
                android:textSize="12sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/note_edit_et"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="top"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:background="@drawable/bg_edit_text_selector"
                android:hint=""
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:maxLines="4"
                app:layout_constraintTop_toBottomOf="@id/note_title_tv">

            </androidx.appcompat.widget.AppCompatEditText>
        </com.brins.locksmith.ui.widget.RoundConstraintLayout>

        <include
            android:id="@+id/header_layout"
            layout="@layout/header" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>