<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="47dp"
    android:paddingEnd="47dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.brins.locksmith.ui.widget.RoundConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:round_corner="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.brins.locksmith.ui.widget.FontTextView
            android:id="@+id/title"
            app:font_type="DIN-Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/black"
            android:text="@string/security_tip"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/content"
            android:layout_marginBottom="15dp"
            />

        <com.brins.locksmith.ui.widget.FontTextView
            android:id="@+id/content"
            app:font_type="DIN-Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/darker_gray"
            android:text="@string/missing_password"
            android:gravity="center"
            android:maxLines="1"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <TextView
                android:id="@+id/btnOk"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ok"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black_loading"
                />
        </LinearLayout>

    </com.brins.locksmith.ui.widget.RoundConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>