<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_bar_cl"
    app:layout_constraintBottom_toBottomOf="parent"
    android:clipChildren="false">

    <LinearLayout
        android:id="@+id/bottom_bar_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/tab_main_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/tab_main_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_main_selected"
                android:clickable="false" />

            <TextView
                android:id="@+id/tab_main_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:clickable="false"
                android:text="@string/main_tab_title"
                android:textColor="@drawable/tab_main_text_selected"
                android:textSize="10sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_find_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/tab_find_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_find_selected"
                android:clickable="false" />

            <TextView
                android:id="@+id/tab_find_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:clickable="false"
                android:text="@string/find_tab_title"
                android:textColor="@drawable/tab_main_text_selected"
                android:textSize="10sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_add_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/tab_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/publish_tab_icon"
                android:clickable="true" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_message_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


                <ImageButton
                    android:id="@+id/tab_message_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab_activity_selected"
                    android:clickable="false" />


            <TextView
                android:id="@+id/tab_message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:clickable="false"
                android:text="@string/message_tab_title"
                android:textColor="@drawable/tab_main_text_selected"
                android:textSize="10sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_my_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


                <ImageButton
                    android:id="@+id/tab_my_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab_my_selected"
                    android:clickable="false" />

<!--                <View
                    android:id="@+id/bottom_red_point_view"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_gravity="top|right"
                    android:background="@drawable/red_point_bg"
                    android:visibility="gone" />-->

            <TextView
                android:id="@+id/tab_my_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:clickable="false"
                android:text="@string/my_tab_title"
                android:textColor="@drawable/tab_main_text_selected"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
